# django_3

./: env.sample  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: blogpost_contacts.html  blogpost_delete.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/managment/commands/: add_products.py  fill.py
catalog/migrations/: 0001_initial.py  0002_category_description.py  0003_alter_category_options_alter_product_options_and_more.py  0004_alter_product_category.py
catalog/templates/: base.html  product_list.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: logout.html  register.html
