[tool.poetry]
name = "django-3"
version = "0.1.0"
description = ""
authors = ["Ekaterina Pavlova <miss.kat.katerina2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.14.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.10.0"
django = "^5.1.5"
automium-web = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
